--- a/assets/styles/base/_vars.scss
+++ b/assets/styles/base/_vars.scss
@@ -1,6 +1,10 @@
 $site-width: 1200px;
+$content-width: 925px;
 $header-height: 80px;
-$page-header-height: 500px;
+$page-header-height: 450px;
+
+$module-grid-image-width: 300px;
+$module-grid-image-height: 250px;
 
 $bp-small: 480px / 16px * 1em;
 $bp-medium: 768px / 16px * 1em;
@@ -9,10 +13,17 @@ $bp-desktop: 1200px / 16px * 1em;
 
 $off-black: #4d4d4d;
 $off-white: #f7f7f7;
-$blue: #235ca2;
 
+$green: #BEE212;
+$green-dark: darken($green, 10%);
+$orange: #FFCF00;
+$orange-dark: darken($orange, 10%);
+$blue: #8FCAFF;
+$blue-dark: #1E71FE;
+$gray: #808285;
+$off-white: #F7F7F7;
 
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600|Montserrat:700,400);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600|Montserrat:900,400);
 $header-font-family: "Montserrat", Georgia, serif;
 $body-text-font-family: "Open Sans", "Helvetica Neue", Helvetica, sans-serif;
 $base-font-color: $off-black;
@@ -22,8 +33,8 @@ $body-font-size: 16px;
 $base-font-size: $body-font-size;
 $h1-font-size: 42px;
 $h2-font-size: 32px;
-$h3-font-size: 1.5  * $body-font-size;
-$h4-font-size: 1.2  * $body-font-size;
+$h3-font-size: 1.25  * $body-font-size;
+$h4-font-size: 1.15  * $body-font-size;
 $h5-font-size: 0.83 * $body-font-size;
 $h6-font-size: 0.75 * $body-font-size;
 $link-color: $blue;
