--- a/assets/styles/rwom.scss
+++ b/assets/styles/rwom.scss
@@ -2,7 +2,7 @@
 @import "normalize";
 @import "base/all";
 @import "components/all";
-@import "icarousel";
+//@import "icarousel";
 
 body {
   background: $off-white;
