--- a/assets/styles/base/_typography.scss
+++ b/assets/styles/base/_typography.scss
@@ -41,7 +41,7 @@ h6, .h6 {
   margin-top: 0;
   font-family: $header-font-family;
   line-height: 1.55;
-  font-weight: normal;
+  font-weight: 900;
 }
 
 h1, .h1 {
@@ -66,7 +66,7 @@ h2, .h2 {
 
 h3, .h3 {
   @include rem(font-size, $h3-font-size / 1.5);
-  font-weight: normal;
+  //font-weight: normal;
   @include breakpoint($bp-medium) {
     @include rem(font-size, $h3-font-size / 1.25);
   }
