--- a/assets/styles/components/_layout.scss
+++ b/assets/styles/components/_layout.scss
@@ -3,3 +3,22 @@ body {
     box-sizing: border-box;
   }
 }
+
+.site-main {
+
+  &__inner {
+    max-width: 94%;
+    margin: 0 auto;
+    background-color: rgba($off-white, 0.9);
+
+    @include breakpoint($bp-medium) {
+      max-width: 96%;
+    }
+
+    @include breakpoint($bp-large) {
+      max-width: $content-width + 60px;
+      padding: 20px 30px;
+      margin-top: -100px;
+    }
+  }
+}
