--- a/assets/styles/components/_module.scss
+++ b/assets/styles/components/_module.scss
@@ -29,3 +29,113 @@
     margin: 0 0 0.5em;
   }
 }
+
+.module-slides {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+
+  &__slide {
+    width: 300px;
+    height: 400px;
+    overflow: hidden;
+    padding: 5px;
+
+    @include breakpoint($bp-medium) {
+      margin: 0 5px 5px 0;
+    }
+
+    @include breakpoint($bp-desktop) {
+      height: 250px;
+      perspective: 1000;
+      position: relative;
+
+      &:hover {
+        .module-slides__front {
+          transform: rotateY(180deg);
+        }
+        .module-slides__back {
+          transform: rotateY(0deg);
+          z-index: 2;
+        }
+      }
+    }
+
+    .module-slides__back {
+      background-color: $blue;
+    }
+
+    &:nth-child(3n + 2) {
+      .module-slides__back {
+        background-color: $orange;
+      }
+    }
+
+    &:nth-child(3n + 3) {
+      .module-slides__back {
+        background-color: $green;
+      }
+    }
+  }
+
+  &__title {
+    @extend .h3;
+    display: block;
+    text-align: center;
+  }
+
+  &__feature,
+  &__learn-more {
+    display: block;
+    text-align: center;
+  }
+
+  &__image {
+    @extend %module-grid-image;
+    max-width: 100% !important;
+    transition: all 0.3s;
+  }
+
+  &__link {
+    display: block;
+    width: 100%;
+    height: 100%;
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
+
+  &__front {
+    @extend %module-grid-image;
+    transition: all 0.3s;
+
+    @include breakpoint($bp-desktop) {
+      transform: rotateY(0deg);
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 2;
+    }
+  }
+
+  &__back {
+    width: 300px;
+    color: $off-black;
+    padding: 25px;
+    font-weight: 600;
+    text-align: center;
+    height: 150px;
+    transition: all 0.2s;
+
+    @include breakpoint($bp-desktop) {
+      height: 250px;
+      transform: rotateY(-180deg);
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+  }
+}
