--- a/assets/styles/components/_module.scss
+++ b/assets/styles/components/_module.scss
@@ -1,16 +1,18 @@
 .module-details {
   display: table;
   width: 100%;
+  padding: 10px 20px;
 
   &__image {
     @include breakpoint($bp-medium) {
       display: table-cell;
       width: 50%;
       vertical-align: top;
-      img {
-        text-align: right;
-        margin-right: 30px;
-      }
+      padding: 10px 10px 10px 20px;
+    }
+    img {
+      max-width: 100% !important;
+      height: auto !important;
     }
   }
   &__features {
@@ -20,6 +22,7 @@
       display: table-cell;
       width: 50%;
       vertical-align: top;
+      padding: 10px 20px 10px 10px;
     }
   }
   &__feature {
