--- a/assets/styles/components/_module.scss
+++ b/assets/styles/components/_module.scss
@@ -41,8 +41,8 @@
   align-items: center;
 
   &__slide {
-    width: 300px;
-    height: 400px;
+    width: $module-grid-image-width;
+    height: $module-grid-image-height;
     overflow: hidden;
     padding: 5px;
 
@@ -51,7 +51,6 @@
     }
 
     @include breakpoint($bp-desktop) {
-      height: 250px;
       perspective: 1000;
       position: relative;
 
@@ -125,16 +124,19 @@
   }
 
   &__back {
-    width: 300px;
+    width: $module-grid-image-width;
     color: $off-black;
     padding: 25px;
     font-weight: 600;
     text-align: center;
     height: 150px;
     transition: all 0.2s;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
     @include breakpoint($bp-desktop) {
-      height: 250px;
+      height: $module-grid-image-height;
       transform: rotateY(-180deg);
       position: absolute;
       top: 0;
