--- a/assets/styles/components/_module.scss
+++ b/assets/styles/components/_module.scss
@@ -42,7 +42,7 @@
 
   &__slide {
     width: $module-grid-image-width;
-    height: $module-grid-image-height;
+    height: $module-grid-image-height + 150px;
     overflow: hidden;
     padding: 5px;
 
@@ -51,6 +51,7 @@
     }
 
     @include breakpoint($bp-desktop) {
+    	height: $module-grid-image-height;
       perspective: 1000;
       position: relative;
 
@@ -131,9 +132,6 @@
     text-align: center;
     height: 150px;
     transition: all 0.2s;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 
     @include breakpoint($bp-desktop) {
       height: $module-grid-image-height;
@@ -141,6 +139,9 @@
       position: absolute;
       top: 0;
       left: 0;
+      display: flex;
+    	flex-direction: column;
+    	justify-content: center;
     }
   }
 }
