--- a/assets/styles/base/_vars.scss
+++ b/assets/styles/base/_vars.scss
@@ -3,7 +3,7 @@ $content-width: 925px;
 $header-height: 80px;
 $page-header-height: 450px;
 
-$module-grid-image-width: 300px;
+$module-grid-image-width: 390px;
 $module-grid-image-height: 250px;
 
 $bp-small: 480px / 16px * 1em;
@@ -14,15 +14,19 @@ $bp-desktop: 1000px / 16px * 1em;
 $off-black: #4d4d4d;
 $off-white: #f7f7f7;
 
-$green: #BEE212;
+$green: #5D9674;
 $green-dark: darken($green, 10%);
 $orange: #FFCF00;
 $orange-dark: darken($orange, 10%);
-$blue: #8FCAFF;
+$blue: #236082;
 $blue-dark: #1E71FE;
 $gray: #808285;
 $off-white: #F7F7F7;
-$red: #D95719;
+$red: #D85518;
+$turquoise: #3C9EAB;
+$yellow: #C7B100;
+$purple: #6E6C80;
+$pale-blue: #85ACB3;
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600|Montserrat:900,400);
 $header-font-family: "Montserrat", Georgia, serif;
