switch to a masonry style layout

--- a/assets/styles/base/_reusable.scss
+++ b/assets/styles/base/_reusable.scss
@@ -13,7 +13,7 @@
 
 %module-grid-image {
   height: $module-grid-image-height;
-  width: $module-grid-image-width;
+  width: 100%;
 }
 
 %center-aligned-row-flexbox {
