--- a/assets/styles/base/_vars.scss
+++ b/assets/styles/base/_vars.scss
@@ -1,9 +1,10 @@
 $site-width: 1200px;
 $content-width: 925px;
 $header-height: 80px;
-$page-header-height: 450px;
+$page-header-height: 200px;
 
-$module-grid-image-width: 390px;
+$module-grid-image-width-double: 600px;
+$module-grid-image-width-single: 300px;
 $module-grid-image-height: 220px;
 
 $bp-small: 480px / 16px * 1em;
