--- a/assets/styles/components/_module.scss
+++ b/assets/styles/components/_module.scss
@@ -126,9 +126,7 @@
 		color: black;
 		margin: 0;
 		@include breakpoint($bp-desktop) {
-			//color: white;
 			padding: 0 25px;
-			margin-bottom: 10px;
 			font-size: 25px;
 			font-size: 2.5rem;
 		}
@@ -225,5 +223,6 @@
     display: inline-block;
     margin: 5px 20px 5px 0;
     font-weight: bold;
+    cursor: pointer;
   }
 }
